CTguesser: Fix themeToggle overlapping text

--- a/other/CTguesser/css/style.css
+++ b/other/CTguesser/css/style.css
@@ -312,3 +312,17 @@ input[type=range] {
 #themeToggle:active {
   transform: translateY(1px);
 }
+
+/* The themeToggle overlaps the title on small screen.*/
+@media (max-height: 635px) {
+  #themeToggle {
+    position: static;
+    display: block;
+    width: 100%;
+    margin-top: 12px;
+  }
+
+  #introFooter {
+    padding-top: 12px;
+  }
+}
